--- a/libs/ui-components/src/contact-form/contact-form.component.scss
+++ b/libs/ui-components/src/contact-form/contact-form.component.scss
@@ -99,7 +99,6 @@ p.intro {
 }
 mat-form-field {
   width: 100%;
- 
 }
 .telephone {
   width: var(--telephone-width);
@@ -243,10 +242,23 @@ textarea {
 .mat-mdc-form-field {
   .mdc-text-field {
     border-radius: 0 !important;
-    font-size: 18px;
+
+    .mdc-text-field__input {
+      font-size: 16px !important;
+      color: var(--color-intro) !important;
+    }
+    .mdc-floating-label {
+      font-size: var(--field-label-font-size) !important;
+      color: var(--field-label-color) !important;
+
+      &--float-above {
+        font-size: var(--field-label-font-size) !important;
+        color: var(--field-label-color) !important;
+      }
+    }
     .mdc-notched-outline {
       border-radius: 0 !important;
-      
+
       &__leading,
       &__notch,
       &__trailing {
