--- a/libs/ui-components/src/landing-page/how-it-works/how-it-works.component.scss
+++ b/libs/ui-components/src/landing-page/how-it-works/how-it-works.component.scss
@@ -1,15 +1,15 @@
 @use '@angular/material' as mat;
-@import 'libs/ui-components/src/styles/_variables.scss';
-
-.how-it-works__section {
-  background-color: $mat-selection-background-color;
-  padding: 73px 0px 112px 0px;
-}
+@use 'libs/ui-components/src/styles/_variables.scss' as variables;
 
 .how-it-works {
-  padding: 20px;
-  height: 500px;
-  background-color: $mat-selection-background-color;
+  background-color: variables.$mat-selection-background-color;
+  padding: 70px 6%;
+  width: 100%;
+
+  &__container {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
 
   &__title {
     text-align: center;
@@ -19,33 +19,53 @@
   }
 
   &__grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
     width: 100%;
-    @include flex-center;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 40px;
+
+    @media (max-width: 899px) and (min-width: 600px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 599px) {
+      grid-template-columns: 1fr;
+    }
   }
 }
 
-img {
-  width: 100%;
-  height: 100%;
-  padding: 20px;
+.card-wrapper {
+  display: flex;
+  justify-content: center;
 }
 
-.material-card {
+.custom-card {
   width: 100%;
-  max-width: 389px;
-  margin-bottom: 20px;
+  height: 100%;
   background-color: white;
   border-radius: 8px;
+  overflow: hidden;
+  @include variables.flex-column;
+  border: 1px solid #e0e0e0;
 
-  @include mat.card-overrides(
-    (
-      elevated-container-color: none,
-      outlined-outline-color: #e7e7e7,
-    )
-  );
+  &__image-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    @include variables.flex-option;
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    padding: 2% 5%;
+  }
+
+  &__content {
+    padding: 16px 20px;
+    flex-grow: 1;
+    @include variables.flex-column;
+  }
 
   &__title {
     font-size: 18px;
@@ -53,25 +73,33 @@ img {
     margin-bottom: 16px;
   }
 
-  &__decription {
+  &__description {
     margin: 0;
-    color: #666;
+    color: variables.$description-color;
     font-size: 14px;
-    line-height: 24px;
-    font-weight: lighter;
+    line-height: 22px;
   }
 }
 
 @media (max-width: 768px) {
-  .how-it-works__section {
-    padding: 20px 0px 20px 0px;
-  }
-  .material-selection__grid {
-    flex-direction: column;
-    align-items: center;
+  .how-it-works {
+    padding: 40px 16px;
+
+    &__title {
+      font-size: 32px;
+      margin-bottom: 24px;
+    }
   }
 
-  .material-card {
-    max-width: 100%;
+  .custom-card {
+    &__title {
+      font-size: 16px;
+      line-height: 24px;
+    }
+
+    &__description {
+      font-size: 14px;
+      line-height: 20px;
+    }
   }
 }
