fix(frontend): add new variables

--- a/libs/ui-components/src/styles/_variables.scss
+++ b/libs/ui-components/src/styles/_variables.scss
@@ -5,7 +5,10 @@ $spacing-unit: 8px;
 $mat-selection-background-color: #f5f5f5;
 $schedule-description-color: #606060;
 $check-icon-color: #2e5235;
-
+$description-color: #666;
+$grid-max-width: 1200px;
+$grid-margin-top: 80px;
+$grid-gap-large: 20px;
 
 $font-size-footer: 0.875rem;
 $footer-links-color: #606060;
