feat(frontend): resolve ariaLabel issues

--- a/apps/iaimc-frontend/src/styles/stylestheme.scss
+++ b/apps/iaimc-frontend/src/styles/stylestheme.scss
@@ -15,7 +15,7 @@ html {
   --submit-btn-hover-bg: #303f9f;
 
   --color-contact: #363636;
-  --color-intro: #423e3a;
+  --color-intro: #34302c;
   --field-label-font-size: 17px;
   --field-label-color: #6a6a66;
 
